--- a/wp43s_pre_V43.css
+++ b/wp43s_pre_V43.css
@@ -34,18 +34,47 @@
 /* Replace $numericKeyBackground with #3a2517 */
 /* Replace $numericKeyLabelColor with #ffffff */
 /* Replace $radius               with 3px     */
+/* Replace $AlphaGold            with #e36c50 */
+/* Replace $AlphaHoverGold       with #FF8669 */
+/* Replace $menubackground       with #292924 */
+/* Replace $fgGold               with #f1b053 */
+/* Replace $fgHoverGold          with #E7D7A0 */
 /**********************************************/
 
 #mainWindow {
   background:  $bezelBackground;
 }
 
+#AlphaKey {
+  background:    $AlphaGold;
+  color:         black;
+  font-family:   WP43S_StandardFont;
+  font-style:    normal;
+  font-weight:   normal;
+  font-size:     22px;
+  border-radius: $radius;
+  padding:       0px;
+  padding-left:  2px;
+  padding-top:   5px;
+  padding-bottom:5px;
+  border-color:  $keyBorder;
+  border-width:  2px;
+}
+#AlphaKey:hover {background-color: $AlphaHoverGold;}
+
 #fSoftkeyArea {
   background: $fGold;
+  font-size:  1px;
 }
 
 #gSoftkeyArea {
   background: $gBlue;
+  font-size:  1px;
+}
+
+#eSoftkeyArea {
+  background: $keyLabelColor;
+  font-size:  1px;
 }
 
 #softkeyArea {
@@ -142,6 +171,22 @@
   border-width:  2px;
 }
 #calcKeyG:hover {background-color: $gHoverBlue;}
+
+#calcKeyFG {
+  background:    $fgGold;
+  color:         black;
+  font-family:   WP43S_StandardFont;
+  font-style:    normal;
+  font-weight:   normal;
+  font-size:     27px;
+  border-radius: $radius;
+  padding:       0px;
+  padding-left:  2px;
+  padding-top:   2px;
+  padding-bottom:2px;
+  border-width:  2px;
+}
+#calcKeyFG:hover {background-color: $fgHoverGold;}
 
 #fShifted {
   background:  $bezelBackground;
